# Baloney

./: Cargo.toml  tilemap.pdn  tilemap.tsx
.cargo/: config.toml
assets/: map.lmp  map.tmx
assets/meshes/: dice.mtl
src/: camera.rs  enemy.rs  main.rs  mathx.rs  player.rs  resources.rs  sprite.rs  tilemap.rs  ui.rs  utils.rs  windows.rs
src/player/: components.rs  events.rs  systems.rs
