[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.1"
bevy_obj = "0.13.0"
bevy_rapier3d = { version = "0.25.0", features = ["debug-render-3d"] }
bevy_sprite3d = "2.8.0"
tiled = "0.11.2"
